--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ ios/Runner/GeneratedPluginRegistrant.*
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+example/android/.project
+example/android/.settings/org.eclipse.buildship.core.prefs
