--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -121,4 +121,4 @@ jobs:
         run: |
           cd example
           flutter pub get
-          flutter build ios --release --no-codesign
+          flutter build ios --release --no-codesign --no-sound-null-safety
