build dependency returned back

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -103,7 +103,7 @@ jobs:
           flutter build apk
 
   build_ios_example:
-    # needs: analysis
+    needs: analysis
     runs-on: macos-latest
     steps:
       - name: Checkout
