--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,13 @@
 name: surf_logger
-version: 1.1.0
-description: "Logger for Dart & Flutter"
+version: 2.0.0
+description: "Production-level logger for Dart & Flutter"
 repository: "https://github.com/surfstudio/flutter-surf-logger"
 issue_tracker: "https://github.com/surfstudio/flutter-surf-logger/issues"
 
-dependencies:
-  logger: ^1.0.0
-
 dev_dependencies:
-  mocktail: ^0.1.1
-  surf_lint_rules: ^2.0.0
-  test: ^1.16.0
+  mocktail: ^0.3.0
+  lints: ^2.0.1
+  test: ^1.16.8
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
