feat: updated versions sdk in example, added provider, surf_lint_rules

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,17 +4,17 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^6.0.5
   surf_logger:
     path: ../
 
 dev_dependencies:
-  surf_lint_rules: ^2.0.0
+  surf_lint_rules: ^3.0.0
 
 flutter:
   uses-material-design: true
