--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,17 @@ on:
 jobs:
   get_fvm_version:
     outputs:
-      flutter_version: ${{ steps.fvm_version.outputs.flutterSdkVersion }}
+      flutter_version: ${{ steps.fvm_version.outputs.flutter }}
     name: "Get Flutter version from FVM"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - id: fvm_version
         uses: zoexx/github-action-json-file-properties@release
         with:
-          file_path: ".fvm/fvm_config.json"
+          file_path: ".fvmrc"
 
   analysis:
     needs: get_fvm_version
